--- a/templates/login.html
+++ b/templates/login.html
@@ -27,7 +27,7 @@
     <input type="text" name="username" />
     <p>Password:</p>
     <input type="password" name="password" /><br>
-    <input type="submit" />
+    <br><input type="submit" />
 </form>
 
 <br><p> New? Register here:</p>
